Nav bar and main bones added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./styles/reset.css" />
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
-    <!--font specified-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Review With Friends</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <div class="menu-nav">
+        <span>menu</span>
+        <nav class="menu-nav-content">
+          <a href="#">fe</a> | <a href="#">fi</a> | <a href="#">fo</a> |
+          <a href="#">from</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <h1>
+        Review <br />
+        With <br />
+        Friends
+      </h1>
+      <!--iphone img-->
+    </main>
     <footer></footer>
   </body>
 </html>
