--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
   </head>
   <body>
     <header>
-      <div class="menu-nav">
-        <span>menu</span>
-        <nav class="menu-nav-content">
-          <a href="#">fe</a> | <a href="#">fi</a> | <a href="#">fo</a> |
-          <a href="#">from</a>
-        </nav>
+      <div class="home-menu">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <div class="menu">
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Feature Request</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Buisness Inqueries</a></li>
+          <li><a href="#">Legal</a></li>
+        </div>
       </div>
     </header>
     <main>
