Menu toggle adjusted, Imgs added

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         With <br />
         Friends
       </h1>
-      <!--iphone img-->
     </main>
-    <footer></footer>
+    <footer>
+      <!--appstore img-->
+    </footer>
   </body>
 </html>
