Favicon and Iphone img placed, Todo: Responsiveness, Accessibility validation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./images/RWF.png" />
     <link rel="stylesheet" type="text/css" href="./styles/reset.css" />
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
       rel="stylesheet"
     />
+
     <title>Review With Friends</title>
   </head>
   <body>
@@ -21,20 +23,19 @@
         <span></span>
         <span></span>
         <div class="menu">
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Feature Request</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Buisness Inqueries</a></li>
-          <li><a href="#">Legal</a></li>
+          <li><a href="./pages/faq.html">FAQ</a></li>
+          <li><a href="./pages/features.html">Feature Request</a></li>
+          <li><a href="./pages/support.html">Support</a></li>
+          <li><a href="./pages/buisness.html">Buisness Inqueries</a></li>
+          <li><a href="./pages/legal.html">Legal</a></li>
         </div>
       </div>
     </header>
     <main>
-      <h1>
-        Review <br />
-        With <br />
-        Friends
-      </h1>
+      <h1>Review With Friends</h1>
+      <div class="img-container">
+        <img src="./images/IphoneImg.png" alt="Photo of Imessage texts" />
+      </div>
     </main>
     <footer>
       <!--appstore img-->
