Fixed phone img formatting, added Appstore Icon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
     <main>
       <h1>Review With Friends</h1>
       <div class="img-container">
-        <img src="./images/IphoneImg.png" alt="Photo of Imessage texts" />
+        <img
+          src="./images/IphoneImg.png"
+          width="550"
+          height="auto"
+          alt="Photo of Imessage texts"
+        />
+      </div>
+      <div class="appstore-container">
+        <a href="https://apps.apple.com/us/app/review-with-friends/id1670226450"
+          ><img
+            src="./images/appstore.png"
+            width="150px"
+            alt="Download on the App Store"
+        /></a>
       </div>
     </main>
     <footer>
