Updates to the HTML structure for improved alignment. Currently resolving issue with element positioning.

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
     </header>
     <main>
       <h1>Review With Friends</h1>
-      <div class="img-container">
+      <span class="img-container">
         <img
           src="./images/IphoneImg.png"
           width="550"
           height="auto"
           alt="Photo of Imessage texts"
         />
-      </div>
-      <div class="appstore-container">
+      </span>
+      <span class="appstore-container">
         <a href="https://apps.apple.com/us/app/review-with-friends/id1670226450"
           ><img
             src="./images/appstore.png"
             width="150px"
             alt="Download on the App Store"
         /></a>
-      </div>
+      </span>
     </main>
     <footer>
       <!--appstore img-->
