Scratch Menu option to revisit, refactored CSS to improve the layout and positioning of elements.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
       rel="stylesheet"
-    />
-
+    />   
     <title>Review With Friends</title>
   </head>
   <body>
     <header>
+    
       <div class="home-menu">
-        <input type="checkbox" />
-        <span></span>
-        <span></span>
-        <span></span>
         <div class="menu">
           <li><a href="./pages/faq.html">FAQ</a></li>
           <li><a href="./pages/features.html">Feature Request</a></li>
@@ -33,25 +29,19 @@
     </header>
     <main>
       <h1>Review With Friends</h1>
-      <span class="img-container">
-        <img
-          src="./images/IphoneImg.png"
-          width="550"
-          height="auto"
-          alt="Photo of Imessage texts"
-        />
-      </span>
-      <span class="appstore-container">
-        <a href="https://apps.apple.com/us/app/review-with-friends/id1670226450"
-          ><img
-            src="./images/appstore.png"
-            width="150px"
-            alt="Download on the App Store"
-        /></a>
-      </span>
+      <div class="main-container">
+        <span class="img-container">
+          <img src="./images/IphoneImg.png" width="550" height="auto" alt="Photo of Imessage texts" />
+        </span>
+        <span class="appstore-container">
+          <a href="https://apps.apple.com/us/app/review-with-friends/id1670226450">
+            <img src="./images/appstore.png" width="150px" alt="Download on the App Store" />
+          </a>
+        </span>
+      </div>
     </main>
     <footer>
-      <!--appstore img-->
+      <!--tbd-->
     </footer>
   </body>
 </html>
