Refactored CSS to improve responsiveness and layout in mobile devices

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
       rel="stylesheet"
-    />   
+    />
     <title>Review With Friends</title>
   </head>
   <body>
     <header>
-    
       <div class="home-menu">
         <div class="menu">
           <li><a href="./pages/faq.html">FAQ</a></li>
@@ -28,17 +27,29 @@
       </div>
     </header>
     <main>
-      <h1>Review With Friends</h1>
-      <div class="main-container">
-        <span class="img-container">
-          <img src="./images/IphoneImg.png" width="550" height="auto" alt="Photo of Imessage texts" />
-        </span>
-        <span class="appstore-container">
-          <a href="https://apps.apple.com/us/app/review-with-friends/id1670226450">
-            <img src="./images/appstore.png" width="150px" alt="Download on the App Store" />
-          </a>
-        </span>
+      <div class="top-container">
+        <h1>Review With Friends</h1>
+        <div class="main-container">
+          <span class="appstore-container">
+            <a
+              href="https://apps.apple.com/us/app/review-with-friends/id1670226450"
+            >
+              <img
+                src="./images/appstore.png"
+                width="150px"
+                alt="Download on the App Store"
+              />
+            </a>
+          </span>
+        </div>
       </div>
+      <span class="img-container">
+        <img
+          src="./images/IphoneImg.png"
+          height="auto"
+          alt="Photo of Imessage texts"
+        />
+      </span>
     </main>
     <footer>
       <!--tbd-->
