Changes made to Index.html to reflect CSS changes, Additional styling adjustments.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
   </head>
   <body>
     <header>
-      <div class="home-menu">
-        <div class="menu">
-          <li><a href="./pages/faq.html">FAQ</a></li>
-          <li><a href="./pages/features.html">Feature Request</a></li>
-          <li><a href="./pages/support.html">Support</a></li>
-          <li><a href="./pages/buisness.html">Buisness Inqueries</a></li>
-          <li><a href="./pages/legal.html">Legal</a></li>
-        </div>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Menu
+          <div class="dropdown-content">
+            <li><a href="./pages/faq.html">FAQ</a></li>
+            <li><a href="./pages/features.html">Feature Request</a></li>
+            <li><a href="./pages/support.html">Support</a></li>
+            <li><a href="./pages/buisness.html">Buisness Inqueries</a></li>
+            <li><a href="./pages/legal.html">Legal</a></li>
+          </div>
+        </button>
       </div>
     </header>
     <main>
@@ -51,8 +54,5 @@
         />
       </span>
     </main>
-    <footer>
-      <!--tbd-->
-    </footer>
   </body>
 </html>
